fixed lower res alignments

--- a/chamber/styles/business-cards.css
+++ b/chamber/styles/business-cards.css
@@ -56,7 +56,6 @@
     width: 9.375rem;
     height: 9.375rem;
     object-fit: cover;
-    margin-bottom: 0.3125rem;
     border: 0.1px solid black;
     border-radius: 100px;
 }
